# thinktape

./: .dockerignore  .env.local  .gitignore  CLAUDE.md  DESIGN-v0.2.md  DESIGN-v0.3.md  DESIGN.md  Dockerfile  LICENSE  README.md  REVIEW.md  TASK.md  config.example.toml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
braindump/: __init__.py  __main__.py  bot.py  cli.py  config.py  core.py  database.py  frontmatter.py  index.py  models.py  review.py  summarize.py  transcribe.py  web.py
braindump/bot/: handlers.py
braindump/importer/: flomo.py
braindump/llm/: summarizer.py
braindump/review/: __init__.py  scheduler.py
braindump/transcribe/: engine.py  funasr_engine.py  whisper_engine.py
braindump/web/: app.py  routes.py
braindump/web/static/: app.js  style.css
braindump/web/templates/: base.html  note.html  timeline.html
data/: config.toml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: AudioPlayer.tsx  Backlinks.tsx  BookmarkCard.tsx  ComposeBox.tsx  ConceptsPanel.tsx  FilterBar.tsx  Header.tsx  ImageGrid.tsx  ItemCard.tsx  Markdown.tsx  Wikilink.tsx
frontend/src/components/calendar/: CalendarGrid.tsx  DayNotes.tsx
frontend/src/components/dashboard/: MonthlyChart.tsx  StatsCards.tsx  TagBarChart.tsx  TypePieChart.tsx
frontend/src/components/layout/: Header.tsx  MobileNav.tsx  ThemeToggle.tsx
frontend/src/components/note/: MediaViewer.tsx  NoteContent.tsx  NoteEditor.tsx  TranscriptBlock.tsx
frontend/src/components/timeline/: DateGroup.tsx  FilterBar.tsx  NoteCard.tsx
frontend/src/hooks/: use-notes.ts  use-theme.ts
frontend/src/lib/: api.ts  markdown.ts  utils.ts
frontend/src/pages/: CalendarPage.tsx  DashboardPage.tsx  NotePage.tsx  TimelinePage.tsx
frontend/src/types/: index.ts
migrations/: 001_initial.sql  002_ai_summary.sql
skill/: SKILL.md
tests/: conftest.py  test_api.py  test_bot_reconnect.py  test_cli.py  test_cli_first.py  test_frontend_e2e.py  test_frontmatter.py  test_index.py  test_links.py  test_review.py  test_store.py  test_telegram_bot.py  test_video_download.py  test_web_e2e.py
thinktape/: __init__.py  bot.py  cli.py  config.py  core.py  index.py  links.py  models.py  review.py  store.py  summarize.py  transcribe.py  web.py
