[project]
name = "braindump"
version = "0.1.0"
description = "Personal expression material library — dump your brain via Telegram, browse via Web UI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "aiosqlite>=0.19",
    "jinja2>=3.1",
    "python-multipart>=0.0.6",
    "tomli>=2.0; python_version < '3.11'",
    "beautifulsoup4>=4.12",
    "pyrofork>=2.3.69",
    "tgcrypto>=1.2.5",
    "faster-whisper>=1.2.1",
    "onnxruntime<1.24",
]

[project.optional-dependencies]
bot = ["pyrofork>=2.3", "tgcrypto>=1.2"]
transcribe = ["funasr>=1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-playwright>=0.7.2",
]
